syntax = "proto3";

package order;

service OrderService {
  rpc CreateOrder (CreateOrderRequest) returns (CreateOrderResponse) {}
}

message CreateOrderRequest {
  int32 productId = 1;
  int32 quantity = 2;
  int32 userId = 3;
}

message CreateOrderResponse {
  int32 status = 7;
  repeated string error = 2;
  int32 id = 6;
  int32 productId = 1;
  int32 quantity = 5;
  int32 userId = 3;
}